source/app/assets/stylesheets/hover-tip.scss
$hoverFadePercent: 5%;

.hover-tip
{
  @include plaintext-font();
  background: lighten($darker-color, $hoverFadePercent);
  z-index: 2000;
  position: absolute;
  color: darken($lighter-color, 6%);
  border: 1px dotted lighten($darker-color, 30%);
  border-radius: 5px;
  font-size: 15px;
  padding: { top:5px; right:7px; bottom:5px; left:7px; }
  text-align: left;
  margin-top: 6px;
}

.hover-tip .diff-filename
{
  border: 1px solid lighten($darker-color, $hoverFadePercent);
  width: auto; min-width: 0; // reset width
}

.hover-tip .mini-text
{
  color: lighten(Gray,10%);
  padding-left: 6px;
  font-size: 12px;
}

img.count-hover-tip
{
   width: 26px;
  height: 26px;
  margin-right: 0px;
}
img.diff-hover-tip
{
  width: 26px;
  height: 26px;
  border-radius: 13px;
  margin-right: 0px;
}

.count-hover-tip
{
  @include non-code-font();
  text-align: right;
  padding-right: 4px;
  font-size: 17px;
}

